9721
This probably qualifies as a better message:
```
scala> 2 match { case Foo(_) => ??? }
<console>:9: error: too many patterns for object Foo offering Boolean: expected 0, found 1
              2 match { case Foo(_) => ??? }
                             ^
```
